--- a/examples/react-live/docs/index.mdx
+++ b/examples/react-live/docs/index.mdx
@@ -1,9 +1,7 @@
-
-export { Root } from './components'
+import { Root } from './components'
 
 # mdx-go react-live example
 
 ```.jsx
 <h1>Edit me</h1>
 ```
-
